# Znake

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
tests/: __init__.py  test_main.py
znakegame/: __init__.py  enums.py  main.py
