[project]
name = "znake"
version = "0.1.0"
description = "Znake, The Game"
authors = [
    {name = "samspriggs94",email = "samspriggs94@outlook.com"}
]
license = {text = "None"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
ruff = "^0.11.4"
