[tool.poetry]
readme = "README.md"
name = "znake"
version = "1.0.0"
description = "Znake, The Game"
authors = ["samspriggs94"]
packages = [{ include = "znakegame" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
ruff = "^0.11.4"
pytest-cov = "^6.1.1"

[tool.mypy]
files = ["**/*.py"]
strict = true
pretty = true
show_error_codes = true
warn_unreachable = true
